fix unalignment with main message with margin-bottom instead of margin

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -83,5 +83,5 @@ button.cancel {
 }
 
 .text {
-  margin: 16px;
+  margin-bottom: 16px;
 }
